@@ -1,7 +1,14 @@
 Change Notes
 ============
 
-
+2008-12-01	FLI
+	- Added cube.clear(), cube.clear(IMeasure) and cube.clear(IMeasure, Key) to 
+	  remove cells by measure/key.
+	- Set cube.reset() to deprecated. Use .clear() instead. 
+	- Fixed a StackOverflowException in the equals() method of the DimensionElement
+	  that could happen when two elements are compared that are from different 
+	  dimensions.
+	  
 2008-11-25	FLI
 	- Optimized memory usage by refactoring the internal data model. This has
 	  lead to a few API changes, but also improved performance. The memory
